@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-23T16:30:23Z",
+  "timestamp" : "2022-07-28T02:08:33Z",
   "count_outdated" : 39,
   "uniques_outdated" : 10,
-  "count" : 42,
-  "uniques" : 12,
+  "count" : 43,
+  "uniques" : 13,
   "views" : [
     {
       "timestamp": "2022-07-22T00:00:00Z",
@@ -14,6 +14,13 @@
     },
     {
       "timestamp": "2022-07-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-27T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
