@@ -1,3 +1,10 @@
+2022-07-28T02:08:33Z:
+* notice: last 14d: unq all: 3 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 10 39 / 12 42
+* notice: next accum: outdated-unq outdated-all / unq all: 10 39 / 13 43
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-07-27]
+
 2022-07-23T16:30:23Z:
 * notice: last 14d: unq all: 2 3
 * notice: prev accum: outdated-unq outdated-all / unq all: 10 39 / 11 41
